Fix testimonials' buttons and spacing

--- a/assets/css/components/buttons.css
+++ b/assets/css/components/buttons.css
@@ -39,7 +39,7 @@
   background-color: white;
 }
 
-/* ----- TESTIMONIALS, PACKAGES, TOP ----- */
+/* ----- TOP ----- */
 
 .btn-top {
   display: inline-block;
@@ -60,17 +60,14 @@
   color: var(--secondery-color);
 }
 
+/* ----- TESTIMONIALS, PACKAGES ----- */
+
 .btn-carousel-packages,
-.btn-carousel-right-testimonials,
-.btn-carousel-left-testimonials {
-  background-color: transparent;
+.btn-carousel-testimonials{
+  background: transparent;
   border: none;
   position: absolute;
   bottom: 45%;
-}
-
-.btn-carousel-packages{
-  background: transparent;
   height: 60px;
   width: 35px;
   transition: all 0.3s ease;
@@ -85,66 +82,64 @@
 }
 
 .btn-carousel-right-testimonials {
-  right: -2em;
+  right: 0;
 }
 
 .btn-carousel-left-testimonials {
-  left: -2em;
+  left: 0;
+}
+
+.btn-carousel-packages i,
+.btn-carousel-testimonials i {
+  padding: 0.3em;
 }
 
 .btn-carousel-packages i {
-  padding: 0.3em;
   color: var(--primary-color);
 }
 
-.btn-carousel-right-testimonials i,
-.btn-carousel-left-testimonials i {
+.btn-carousel-testimonials i {
   color: var(--quaternary-color);
 }
 
-.btn-carousel-right-testimonials i,
-.btn-carousel-left-testimonials i {
-  padding: 1em;
-  transition: all 0.3s ease;
+.btn-carousel-packages:hover,
+.btn-carousel-packages:focus,
+.btn-carousel-packages:active,
+.btn-carousel-testimonials:hover,
+.btn-carousel-testimonials:focus,
+.btn-carousel-testimonials:active{
+  cursor: pointer;
+  outline: none;
 }
 
 .btn-carousel-packages:hover,
 .btn-carousel-packages:focus,
 .btn-carousel-packages:active{
   background: rgba(var(--primary-color-rgb),0.3);
-  cursor: pointer;
-  outline: none;
 }
 
 .btn-carousel-right-packages:hover,
 .btn-carousel-right-packages:focus,
-.btn-carousel-right-packages:active{
+.btn-carousel-right-packages:active,
+.btn-carousel-right-testimonials:hover,
+.btn-carousel-right-testimonials:focus,
+.btn-carousel-right-testimonials:active{
   transform: translateX(0.5em);
 }
 
 .btn-carousel-left-packages:hover,
 .btn-carousel-left-packages:focus,
-.btn-carousel-left-packages:active{
+.btn-carousel-left-packages:active,
+.btn-carousel-left-testimonials:hover,
+.btn-carousel-left-testimonials:focus,
+.btn-carousel-left-testimonials:active{
   transform: translateX(-0.5em);
-}
-
-.btn-carousel-right-testimonials:focus,
-.btn-carousel-left-testimonials:focus {
-  outline: none;
 }
 
 .btn-carousel-packages:hover i,
 .btn-carousel-packages:focus i,
 .btn-carousel-packages:active i {
   color: #FFFFFF;
-}
-
-.btn-carousel-left-testimonials i:hover {
-  transform: translateX(-0.5em);
-}
-
-.btn-carousel-right-testimonials i:hover {
-  transform: translateX(0.5em);
 }
 
 /* ----- CONTACT ----- */
