--- a/assets/css/pages/testemonials.css
+++ b/assets/css/pages/testemonials.css
@@ -1,7 +1,5 @@
 .section-testimonials {
-  margin: 0 auto;
-  padding: 4em 1em 4em 1em;
-  max-width: 100%;
+  padding: 4em 0;
 }
 
 .testimonials-container {
